# ocrscout

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/ocrscout/: __init__.py  __main__.py  cost.py  errors.py  jobs.py  log.py  managed.py  metrics.py  profile.py  registry.py  runtime.py  state.py  types.py
src/ocrscout/backends/: __init__.py  _detector_pool.py  _openai_chat.py  docling.py  hf_scripts.py  layout_chat.py  litellm.py  openai_api.py  tesseract.py  vllm.py
src/ocrscout/benchmarks/: __init__.py
src/ocrscout/cli/: __init__.py  _resolve.py  _worker.py  apply.py  benchmark.py  costs.py  down.py  inspect.py  introspect.py  launch.py  layout.py  logs.py  normalize.py  ocr.py  publish.py  report.py  run.py  sample.py  scout.py  serve.py  source.py  status.py  submit.py  sync.py  viewer.py
src/ocrscout/comparisons/: __init__.py  document.py  layout.py  text.py
src/ocrscout/comparisons/renderers/: __init__.py  document_renderer.py  layout_renderer.py  text_renderer.py
src/ocrscout/evaluators/: __init__.py  edit_distance.py  vlm_judge.py
src/ocrscout/exports/: __init__.py  layout.py  parquet.py  schema.py  stages.py
src/ocrscout/interfaces/: __init__.py  backend.py  benchmark.py  comparison.py  evaluator.py  export.py  layout_detector.py  normalizer.py  reference.py  reporter.py  runner.py  source.py  source_action.py
src/ocrscout/io/: __init__.py  images.py  paths.py  resume.py  rows.py  schema.py  shards.py  source_parquet.py  store.py
src/ocrscout/layout_detectors/: __init__.py  pp_doclayout_v3.py  precomputed.py
src/ocrscout/normalizers/: __init__.py  _tables.py  doctags.py  layout_json.py  markdown.py  passthrough.py
src/ocrscout/orchestration/: __init__.py  plan.py  provisioner.py
src/ocrscout/orchestration/autoscale/: __init__.py  decisions.py
src/ocrscout/pipeline/: __init__.py  components.py  context.py  cost.py  engine.py  normalize_ops.py  pipeline.py  stage.py
src/ocrscout/pipeline/stages/: __init__.py  layout.py  normalize.py  ocr.py  sample.py
src/ocrscout/profiles/: dots-mocr.yaml  dots-ocr.yaml  falcon-ocr.yaml  glm-ocr-layout.yaml  glm-ocr.yaml  lighton-ocr2.yaml  olmocr2-vllm.yaml  paddleocr-vl-layout.yaml  paddleocr-vl.yaml  rolm-ocr.yaml  smoldocling.yaml
src/ocrscout/publish/: __init__.py  _card.py  _stats.py  dataset.py  space.py
src/ocrscout/references/: __init__.py  bhl_ocr.py  plain_text.py
src/ocrscout/reporters/: __init__.py  html.py
src/ocrscout/runners/: __init__.py  _daemon.py  _ephemeral.py  _gpu_pricing.py  _ports.py  _preflight.py  hf.py  local.py  skypilot.py  vllm_runner.py
src/ocrscout/sources/: __init__.py  _bhl_classify_local.py  _flags_bridge.py  _info.py  _paths.py  bhl.py  bhl_actions.py  hf_dataset.py  local.py  pages.py
src/ocrscout/sync/: __init__.py  cache.py  fetch.py  introspect.py
src/ocrscout/viewer/: __init__.py  app.py  diff.py  store.py
src/ocrscout/viewer/static/: viewer.css  viewer.js
tests/: conftest.py  test_cli.py  test_imports.py  test_introspect.py  test_local_source.py  test_metrics.py  test_normalizer_layout.py  test_normalizer_markdown.py  test_profile_yaml.py  test_registry.py
tests/fixtures/: sample_layout.json  sample_script.py
