[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocrscout"
version = "0.1.0"
description = "Scout frontier OCR models on your data, your hardware, your terms."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Sebastian Majstorovic", email = "storytracer@gmail.com" },
]
keywords = ["ocr", "vlm", "docling", "evaluation", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]
dependencies = [
    "docling-core>=2.50.0",
    "huggingface-hub>=0.25.0",
    "datasets>=3.0.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    # Used by sources/references that talk to fsspec backends, IIIF, etc.
    # Pulls into core because the BHL adapter (and any future adapter that
    # touches HTTP) wants connection pooling without a separate dep gate.
    "requests>=2.31.0",
    # litellm is the universal OpenAI-compatible client. Both LiteLLMBackend
    # (one POST per page) and LayoutChatBackend (one POST per region) call
    # ``litellm.completion``; the success_callback in ``ocrscout.cost``
    # records per-page tokens/cost. The proxy binary (``litellm[proxy]``)
    # is shipped under the ``vllm`` extra for daemon spawns.
    "litellm>=1.50.0",
    # nvitop wraps libnvml.so via nvidia-ml-py; pure-Python install in seconds,
    # no GPU runtime deps. Used by managed-mode GPU budgeting/telemetry.
    # Gracefully returns no devices on CPU-only hosts.
    "nvitop>=1.3.0",
]

[project.optional-dependencies]
pdf = ["ocrmypdf>=16.0.0", "pikepdf>=9.0.0"]
alto = ["lxml>=5.0.0"]
iiif = ["httpx>=0.27.0"]
# Cloud filesystems for the hf_dataset source adapter. `datasets` is in
# core deps; the fsspec backends below are only pulled in when you point
# --source at the matching URL scheme.
cloud = [
    "s3fs>=2024.0.0",
    "gcsfs>=2024.0.0",
]
docling = ["docling"]
serve = ["litellm[proxy]>=1.50.0"]
viewer = [
    # gradio 6+ moved css/head from the Blocks constructor onto Blocks.launch,
    # which is the API our viewer / Space app target. Older gradio also fails
    # to import against huggingface_hub>=1.0 (removed `HfFolder`). 6.13 is
    # the current stable.
    "gradio>=6.13.0",
    # Custom component for the source-page bbox overlay. gr.AnnotatedImage
    # wrote one full-resolution PNG mask per bbox per page render and
    # blocked the viewer; this one ships boxes as plain dicts and renders
    # them on a canvas, so cost is O(1) regardless of bbox count.
    # Using seanpedrick-case's fork because the upstream
    # `gradio_image_annotation` 0.5.0 wheel is incomplete (its bundle
    # references svelte_runtime_entry.js but doesn't include it). The
    # fork is properly packaged for gradio 6.x.
    "gradio_image_annotation_redaction>=0.5.5",
]
# Layout-aware OCR pipeline (ocrscout.backends.layout_chat + the
# pp-doclayout-v3 detector). Uses the official Hugging Face Transformers
# integration of PP-DocLayoutV3 — pulls in transformers + torch (CPU-only
# wheels by default; users with CUDA can install the GPU torch wheels
# themselves). ~600 MB extra; the alternative was ~200 LOC of fragile
# hand-maintained ONNX preprocessing/decoding.
#
# transformers>=4.59.0 is the first release that ships
# PPDocLayoutV3ForObjectDetection / PPDocLayoutV3ImageProcessor.
layout = [
    "transformers>=4.59.0",
    "torch>=2.0.0",
]
# Biodiversity Heritage Library source + OCR reference adapter.
# DuckDB drives the TSV→parquet catalog conversion (refresh) and the
# parquet-backed sampling query (iter_pages) on the resulting
# `catalog/{item,page,title}.parquet` files; s3fs provides anonymous S3
# access for both the catalog files and the JP2/OCR sidecars;
# imagecodecs ships its own OpenJPEG decoder so JP2 decoding doesn't
# depend on a system libopenjp2.
bhl = [
    "duckdb>=1.1.0",
    "s3fs>=2024.0.0",
    "imagecodecs>=2024.0.0",
]
# GPU stack for the in-process rights classifier (BHL refresh --runner
# local) and any future local vLLM workloads. The torch version is
# deliberately left to the user's existing environment — DGX-class
# hardware (ARM64 + CUDA) needs a torch wheel from Nvidia's index that
# isn't on pypi, so locking torch here would lock those users out. If
# torch isn't present, `classify_parquet` raises with the install hint.
vllm = [
    "vllm>=0.11.0",
    "transformers>=4.53.0",
    "pyarrow>=14.0",
]
# Optional metrics for the comparisons subsystem. The TextComparison core
# always returns a SequenceMatcher word-level similarity score; jiwer adds
# CER and WER (the OCR/ASR community lingua franca). Pure-Python install,
# no GPU footprint.
eval = [
    "jiwer>=3.0.0",
]
# Remote orchestration via SkyPilot on Kubernetes. Lazy-imported by
# SkyPilotRunner so installing this is only required on the
# orchestrating machine, not on every K8s worker (workers install
# ocrscout[vllm] in their pool/job setup script).
skypilot = [
    "skypilot-nightly[kubernetes]>=0.7.0",
]
# HuggingFace Jobs API runner. Same lazy-import pattern.
hf = [
    "huggingface-hub>=0.25.0",
]
all = [
    "ocrscout[pdf,alto,iiif,cloud,docling,serve,viewer,layout,bhl,eval,skypilot,hf]",
]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[project.scripts]
ocrscout = "ocrscout.cli:main"

# Entry-point group declarations for downstream packages that ship custom
# components. Each group maps to ``EntryGroup`` in src/ocrscout/registry.py;
# adding a new pluggable axis means adding a section header here too.
[project.entry-points."ocrscout.layout_detectors"]
# Built-in detectors are registered in src/ocrscout/registry.py;
# third-party packages add entries under this header.

[project.entry-points."ocrscout.runners"]
# Built-in runners (local / skypilot / hf) are registered in
# src/ocrscout/registry.py; third-party packages (Slurm, AI Factory, …)
# add entries under this header.

[project.urls]
Homepage = "https://github.com/storytracer/ocrscout"
Issues = "https://github.com/storytracer/ocrscout/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ocrscout"]

[tool.hatch.build.targets.wheel.force-include]
"src/ocrscout/profiles" = "ocrscout/profiles"
"src/ocrscout/viewer/static" = "ocrscout/viewer/static"

[tool.hatch.build.targets.sdist]
include = ["src/ocrscout", "README.md", "CLAUDE.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]  # typer.Option in defaults is the canonical typer idiom

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true

[tool.uv]
# Exclude rapidocr: docling pulls it in as the default OCR engine for
# its StandardPdfPipeline, but ocrscout only ever uses docling's
# VlmPipeline (routed through our vLLM backends), so it's dead weight.
# It also drags in the full opencv-python, whose cv2/typing/ directory
# shadows the stdlib typing module inside vLLM's multiprocessing.spawn
# workers and crashes EngineCore on startup. The `sys_platform ==
# 'never'` marker is uv's idiom for "this requirement is never
# satisfiable" — uv drops it from the resolution.
override-dependencies = [
    "rapidocr ; sys_platform == 'never'",
]

[dependency-groups]
dev = [
    "playwright",
]
