[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocrscout"
version = "0.1.0"
description = "Scout frontier OCR models on your data, your hardware, your terms."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Sebastian Majstorovic", email = "storytracer@gmail.com" },
]
keywords = ["ocr", "vlm", "docling", "evaluation", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]
# Single flat runtime dependency list. Everything ocrscout might need at
# runtime is mandatory — no extras. Trade-off: a fresh install pulls in
# ~2-3 GB of wheels (torch, vllm, transformers, gradio, …) regardless of
# whether the user actually exercises those code paths, and the
# previous "zero GPU deps in core" rule no longer holds. The win is that
# `uv sync` / `uv run` / `pip install ocrscout` all do the same thing
# with no flag dance — no more "I forgot --all-extras and now my run
# uninstalled vLLM" surprises. Dev tooling (ruff/mypy/playwright) stays
# in [dependency-groups] dev where it doesn't ship to end users.
dependencies = [
    # --- core runtime ---
    "docling-core>=2.50.0",
    "huggingface-hub>=0.25.0",
    "datasets>=3.0.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    # HTTP for sources/references hitting fsspec backends, IIIF, etc.
    "requests>=2.31.0",
    "httpx>=0.27.0",
    # --- LiteLLM stack ---
    # Both LiteLLMBackend and LayoutChatBackend call `litellm.completion`;
    # the success_callback in `ocrscout.cost` records per-page tokens/cost.
    # `[proxy]` ships the proxy binary that LocalRunner spawns (previously
    # in the `serve` extra; now folded in so `ocrscout launch` works on
    # every install without an extra-flag dance).
    "litellm[proxy]>=1.50.0",
    # litellm lazy-imports tenacity *only* when `num_retries` actually has
    # to fire on a failed attempt — so a missing dep doesn't surface
    # until the first retryable transient mid-run. Hard dep here.
    "tenacity>=8.0",
    # --- GPU telemetry / autoscaler ---
    # nvitop wraps libnvml.so via nvidia-ml-py; pure-Python install in
    # seconds. Gracefully returns no devices on CPU-only hosts.
    "nvitop>=1.3.0",
    # GPU spec database consumed by the autoscaler at launch time.
    # `thefuzz` is required by dbgpu's name-matching `search`.
    "dbgpu>=2025.0",
    "thefuzz>=0.22.0",
    # --- vLLM serving stack ---
    # The torch version is deliberately left unpinned — DGX-class
    # hardware (ARM64 + CUDA) needs a torch wheel from Nvidia's index
    # that isn't on pypi, so a strict pin would lock those users out.
    "vllm>=0.11.0; sys_platform == 'linux'",
    "transformers>=4.59.0",
    "torch>=2.0.0",
    "pyarrow>=14.0",
    # opencv-python-headless is a hard runtime requirement of
    # PPDocLayoutV3ImageProcessor (preprocess uses cv2.resize/warpAffine);
    # headless avoids pulling in Qt/GTK on server hosts.
    "opencv-python-headless>=4.8.0",
    # --- PDF / ALTO inputs ---
    "ocrmypdf>=16.0.0",
    "pikepdf>=9.0.0",
    "lxml>=5.0.0",
    # --- Cloud / fsspec backends ---
    "s3fs>=2024.0.0",
    "gcsfs>=2024.0.0",
    # --- BHL source ---
    # DuckDB drives the TSV→parquet catalog conversion + parquet-backed
    # sampling query. imagecodecs ships its own OpenJPEG decoder so JP2
    # decoding doesn't depend on a system libopenjp2.
    "duckdb>=1.1.0",
    "imagecodecs>=2024.0.0",
    # --- Comparisons / evaluation metrics ---
    # jiwer adds CER and WER on top of TextComparison's SequenceMatcher
    # word-level similarity (the OCR/ASR community lingua franca).
    "jiwer>=3.0.0",
    # --- Viewer ---
    # gradio 6+ moved css/head onto Blocks.launch, which is the API our
    # viewer targets. 6.13 is the current stable. The
    # `gradio_image_annotation_redaction` fork is properly packaged for
    # gradio 6.x (upstream 0.5.0 wheel is incomplete).
    "gradio>=6.13.0",
    "gradio_image_annotation_redaction>=0.5.5",
    # --- Remote runners ---
    # SkyPilot for K8s pools; HF Jobs uses huggingface-hub (already in
    # core). Both are lazy-imported inside their respective runner.
    "skypilot-nightly[kubernetes]>=0.7.0",
]

[project.scripts]
ocrscout = "ocrscout.cli:main"

# Entry-point group declarations for downstream packages that ship custom
# components. Each group maps to ``EntryGroup`` in src/ocrscout/registry.py;
# adding a new pluggable axis means adding a section header here too.
[project.entry-points."ocrscout.layout_detectors"]
# Built-in detectors are registered in src/ocrscout/registry.py;
# third-party packages add entries under this header.

[project.entry-points."ocrscout.runners"]
# Built-in runners (local / skypilot / hf) are registered in
# src/ocrscout/registry.py; third-party packages (Slurm, AI Factory, …)
# add entries under this header.

[project.urls]
Homepage = "https://github.com/storytracer/ocrscout"
Issues = "https://github.com/storytracer/ocrscout/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ocrscout"]
# profiles/*.yaml and viewer/static/* live under the package tree and are
# bundled by `packages` above. A force-include of those same paths maps each
# file a second time and hatchling aborts the build with "A second file is
# being added to the wheel archive at the same path" — so don't re-add them.

[tool.hatch.build.targets.sdist]
include = ["src/ocrscout", "README.md", "CLAUDE.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]  # typer.Option in defaults is the canonical typer idiom

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true

[dependency-groups]
# Dev-only tooling. uv installs the `dev` group by default on `uv sync`
# / `uv run`, so no flag dance is needed — but these don't ship with
# `pip install ocrscout` to end users, which is the right scope for
# linters/formatters/test fixtures.
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "playwright",
]
